fullSandbox11072023/force-app/main/default/objects/IDN_Price_Increase__c/IDN_Price_Increase__c.object-meta.xml
<CustomObject>
    <label>IDN Price Increase</label>
    <nameField>
        <displayFormat>IDNPrice-{00000}</displayFormat>
        <label>IDN Price Increase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IDN Price Increases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>