fullSandbox11072023/force-app/main/default/objects/IDN_Price_Increase__c/fields/Increase_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Increase_Start_Date__c</fullName>
    <label>Increase Start Date</label>
    <type>Date</type>
</CustomField>